--- a/config/zones/DE.yaml
+++ b/config/zones/DE.yaml
@@ -22,6 +22,9 @@ capacity:
       source: Fraunhofer ISE
       value: 8911.0
   coal:
+    - datetime: '2024-11-11'
+      source: Fraunhofer ISE
+      value: 32600.0
     - datetime: '2023-01-01'
       source: Fraunhofer ISE
       value: 37489.0
@@ -29,6 +32,9 @@ capacity:
       source: Fraunhofer ISE
       value: 37679.0
   gas:
+    - datetime: '2024-11-11'
+      source: Fraunhofer ISE
+      value: 36300.0
     - datetime: '2023-01-01'
       source: Fraunhofer ISE
       value: 34799.0
@@ -62,6 +68,9 @@ capacity:
       source: Fraunhofer ISE
       value: 4689.0
   solar:
+    - datetime: '2024-11-11'
+      source: Fraunhofer ISE
+      value: 94300.0
     - datetime: '2023-01-01'
       source: Fraunhofer ISE
       value: 81824.0
@@ -73,6 +82,9 @@ capacity:
       source: Fraunhofer ISE
       value: 2766.0
   wind:
+    - datetime: '2024-11-11'
+      source: Fraunhofer ISE
+      value: 71700.0
     - datetime: '2023-01-01'
       source: Fraunhofer ISE
       value: 69485.0
