--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,13 +37,6 @@ ruff = "0.4.3"
 tzdata = "^2024.1"
 numpy = "^1.24.4"
 
-[tool.poetry.dev-dependencies]
-mock = "^2.0.0"
-requests-mock = "~1.3.0"
-testfixtures = "^7.0.0"
-click = "<=8.0"
-pytest = "^7.1.2"
-
 [tool.poetry.scripts]
 test-parser = 'test_parser:test_parser'
 test_parser = 'test_parser:test_parser'
@@ -84,6 +77,10 @@ scripts = ["xmltodict"]
 [tool.poetry.group.dev.dependencies]
 snapshottest = "^0.6.0"
 pytest = "^7.4.0"
+mock = "^2.0.0"
+requests-mock = "~1.3.0"
+testfixtures = "^7.0.0"
+click = "^8.0.0"
 
 
 [tool.pytest.ini_options]
