--- a/config/zones/LT.yaml
+++ b/config/zones/LT.yaml
@@ -40,6 +40,9 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 1165.0
+    - datetime: '2024-10-22'
+      source: litgrid.eu
+      value: 1878.0
   unknown:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -51,6 +54,9 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 1288.0
+    - datetime: '2024-10-22'
+      source: litgrid.eu
+      value: 1669.0
 contributors:
   - corradio
   - nessie2013
