--- a/config/zones/CA-AB.yaml
+++ b/config/zones/CA-AB.yaml
@@ -4,6 +4,7 @@ bounding_box:
   - - -109.49932108789892
     - 60.50005890629359
 capacity:
+  coal: 0
   geothermal: 0
   hydro storage: 0
   nuclear: 0
