Feat: New Feature Popover (#7302)
* feat: add new feature popover
- adds new feature component
- adds content for data picker popover
- adds content for new price popover

* chore: code reorganization

* refactor: remove isLoadingMap check and use feature flag

* feat: use ff and modify for historical storytelling

* fix: popover sizing mobile

* feat: use specific ff for popover

* fix lockfile

* fix: cypress tests

* update test and icon for historical storytelling popover

* fix: popover margin

---------

Co-authored-by: Cadence <cadence@Cadences-MacBook-Pro.local>

--- a/web/package.json
+++ b/web/package.json
@@ -60,6 +60,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-portal": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-switch": "^1.1.1",
