--- a/config/exchanges/SE-SE2_SE-SE3.yaml
+++ b/config/exchanges/SE-SE2_SE-SE3.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 14.804
   - 61.42
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 180
