--- a/config/zones/NI.yaml
+++ b/config/zones/NI.yaml
@@ -306,6 +306,7 @@ fallbackZoneMixes:
         wind: 0.13018731995607496
 parsers:
   price: NI.fetch_price
+  exchange: NI.fetch_exchange
   production: NI.fetch_production
   productionCapacity: IRENA.fetch_production_capacity
 region: Americas
