--- a/config/zones/CH.yaml
+++ b/config/zones/CH.yaml
@@ -5,18 +5,69 @@ bounding_box:
     - 47.808380127
 
 capacity:
-  biomass: 648.4
-  coal: 0
-  gas: 304.7
-  geothermal: 0
-  hydro: 10438.1
-  hydro storage: 6697
-  nuclear: 3014.6
-  oil: 0
-  solar: 6357.9
-  wind: 102.2
-  unkown: 15860
-  
+  biomass:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 542.9
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 648.4
+  coal:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 0
+  gas:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 216.5
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 304.7
+  geothermal:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 0
+  hydro:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 12885.3
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 10438.1
+  hydro storage:
+    - datetime: '2024-01-01'
+      source: entsoe
+      value: 6697
+  nuclear:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 3014.6
+  oil:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 0.4
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 0
+  solar:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 4736.7
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 6357.9
+  wind:
+    - datetime: '2023-01-01'
+      source: SFOE
+      value: 88.4
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 102.2
+  unknown:
+    - datetime: '2024-01-01'
+      source: SFOE
+      value: 15860
+
 contributors:
   - corradio
   - postronium
