--- a/config/zones/RO.yaml
+++ b/config/zones/RO.yaml
@@ -1,4 +1,4 @@
-_comment: Biomass includes 19.227 MW of biogas and 6.03 MW of waste incineration
+_comment: Biomass includes 22.46 MW of biogas and 6.03 MW of waste incineration
 bounding_box:
   - - 20.2201924985
     - 43.6884447292
@@ -9,6 +9,9 @@ capacity:
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 118.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 134.76
   coal:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -16,6 +19,9 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 1909.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 2762.2
   gas:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -23,6 +29,13 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 2238.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 2713.79
+  geothermal:
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 0.05
   hydro:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -30,10 +43,16 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 6139.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 6632.98
   nuclear:
     - datetime: '2023-01-01'
       source: entsoe.eu
       value: 1300.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 1413.0
   solar:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -41,6 +60,9 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 1293.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 1821.33
   wind:
     - datetime: '2023-01-01'
       source: entsoe.eu
@@ -48,6 +70,9 @@ capacity:
     - datetime: '2024-01-01'
       source: entsoe.eu
       value: 2958.0
+    - datetime: '2024-12-12'
+      source: anre.ro
+      value: 3095.31
 contributors:
   - corradio
   - mzaharie
