chore(exchanges): Switch internal nordic exchanges to Nordpool

--- a/config/exchanges/FI_SE-SE3.yaml
+++ b/config/exchanges/FI_SE-SE3.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 19.797
   - 60.628
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -110
