--- a/config/exchanges/NO-NO3_NO-NO5.yaml
+++ b/config/exchanges/NO-NO3_NO-NO5.yaml
@@ -6,6 +6,6 @@ lonlat:
   - 7.1
   - 61.194118
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 140
