--- a/config/exchanges/DK-DK1_SE-SE3.yaml
+++ b/config/exchanges/DK-DK1_SE-SE3.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 11.556268
   - 56.857802
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 70
