--- a/config/exchanges/DK-DK2_SE-SE4.yaml
+++ b/config/exchanges/DK-DK2_SE-SE4.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 12.704418
   - 55.952282
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 70
