--- a/config/exchanges/FI_NO-NO4.yaml
+++ b/config/exchanges/FI_NO-NO4.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 25.35158
   - 68.862684
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -30
