--- a/config/exchanges/NO-NO1_NO-NO2.yaml
+++ b/config/exchanges/NO-NO1_NO-NO2.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 9.3
   - 59.844429
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -110
