--- a/config/exchanges/NO-NO1_NO-NO5.yaml
+++ b/config/exchanges/NO-NO1_NO-NO5.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 8.3
   - 61.132896
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: -90
