--- a/config/exchanges/NO-NO3_SE-SE2.yaml
+++ b/config/exchanges/NO-NO3_SE-SE2.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 12.24842
   - 63.462916
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 90
