--- a/config/exchanges/NO-NO4_SE-SE1.yaml
+++ b/config/exchanges/NO-NO4_SE-SE1.yaml
@@ -5,6 +5,6 @@ lonlat:
   - 15.656
   - 66.609
 parsers:
-  exchange: ENTSOE.fetch_exchange
+  exchange: NORDPOOL.fetch_exchange
   exchangeForecast: ENTSOE.fetch_exchange_forecast
 rotation: 130
