--- a/config/zones/MW.yaml
+++ b/config/zones/MW.yaml
@@ -1,3 +1,8 @@
+bounding_box:
+  - - 32.1757267572676
+    - -17.629872698428883
+  - - 36.4049590495905
+    - -8.907749731785735
 country: MW
 region: Africa
 timezone: Africa/Blantyre
