--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -6,7 +6,12 @@
     "es2021": true
   },
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react-prefer-function-component", "simple-import-sort", "import"],
+  "plugins": [
+    "react-prefer-function-component",
+    "simple-import-sort",
+    "import",
+    "unused-imports"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -51,9 +56,16 @@
       }
     ],
     "no-void": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "warn", // TODO: Change to error when ready for production
-      { "args": "after-used", "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
     ],
     "@typescript-eslint/ban-ts-comment": [
       "error",
