--- a/web/package.json
+++ b/web/package.json
@@ -179,6 +179,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-testing-library": "^6.2.0",
     "eslint-plugin-unicorn": "^51.0.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "8.0.3",
     "jsdom": "20.0.3",
     "lint-staged": "13.3.0",
